# SimpleTrans

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __main__.py  database_interaction.py  hapi_wrapper.py  optical_depth_functions.py  plank.py  radiative_transfer.py
src/simpletrans/: __main__.py  database_interaction.py  hapi_wrapper.py  isa.py  optical_depth_functions.py  plank.py  radiative_transfer.py
